<resources>
    <string name="app_name">AsyncTaskLoader</string>
    <string name="id">1642911,1650357,1627896</string>
    <string name="masuka_nama_kota">Masukkan id kota misal Jakarta = 1642911</string>
    <string name="cari">cari</string>
    <string name="temprature">Temprature</string>
    <string name="nama_kota">Nama Kota</string>
    <string name="deskripsi">Deskripsi</string>
</resources>
